--- a/Homework2.html/homework2.html
+++ b/Homework2.html/homework2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Моя первая страница</title>
+    <link rel="stylesheet" href="./homeworks.css">
 </head>
 <body>
 <h1>Хрен знает какой сайт и его страница.</h1>
