--- a/Homework2.html/homework2.html
+++ b/Homework2.html/homework2.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя первая страница</title>
-    <link rel="stylesheet" href="./homeworks.css">
+    <link rel="stylesheet" href="css\homework.css">
+    <title>Завтрак холостяка</title>
 </head>
 <body>
-<h1>Хрен знает какой сайт и его страница.</h1>
-
+    <h1 style="color:rgb(187, 179, 73);">Завтрак холостяка</h1>
+    <hr>
+    <p> <img src="https://vosmarket.ru/uploads/posts/2019-04/1555438732_vosmarket_ru-glazunya-salo.jpg" alt="Яичница" width="300"></p>
+    <h2>Ингредиенты</h2>
+    <ul>
+        <li>Сало - 180 гр</li>
+        <li>Яйцо - 2 шт</li>
+        <li>Лук 1 шт.средней величины</li>
+        <li>Соль - по вкусу</li>
+        <li>Черный перец - по вкусу</li>
+    </ul>
+    <h2>Способ приготовления</h2>
+    <p><em>Сегодня мы с Вами приготовим <b>яичницу</b>, которые можно быстро приготовить на завтрак для себя любимого.</em></p> 
+     
+    <ol>
+        <li>Режем сало ровными небольшими кусочками.</li>
+        <li>На разогретую сковороду обжариваем со всех сторон.</li>
+        <li>Лук режем полуколцами и обжариваем в месте с салом.</li>
+        <li>Разбиваем яица и выключаем огонь по сковородой.</li>
+        <li>Даем немного остыть и выкладываем на тарелку,по опыту знаю лучше есть со сковородки с кусочком серого хлеба.</li>
+        <li>Приятного аппетита!</li>
+    </ol>
+    <p><a href="https://lifehacker.ru/kak-prigotovit-yaichnicu-recepty/">Другие рецепты яичницы</a>    
+    </p>
     
+    <hr>
+    <p> <img src="https://2eda.ru/files/445/6c4b0e886e.JPG" alt="Яичница с зеленым луком" width="300"></p>
+    <div class="block">Лучше всего яичницу подавать горячей со стопкой холодной водки или самогонки.</div>
 </body>
 </html>
